fix(boards): #MAG-6 adapt create folder button on small screens

--- a/src/main/resources/public/sass/global/components/containers/_boards.scss
+++ b/src/main/resources/public/sass/global/components/containers/_boards.scss
@@ -44,6 +44,7 @@
     &-folder-button {
       width: 66%;
       margin: 14px auto auto;
+      display: flex;
 
       a {
         border: solid $magneto-blue 1px;
